удаление script.js

--- a/source/less/blocks/form-comment.less
+++ b/source/less/blocks/form-comment.less
@@ -63,6 +63,7 @@
   width: 280px;
   min-height: 150px;
   padding: 9px 12px 9px 15px;
+  display: block;
 
   @media (min-width: @tablet-width) {
     width: 631px;
