--- a/source/less/blocks/company.less
+++ b/source/less/blocks/company.less
@@ -15,7 +15,17 @@
   }
 }
 
-.company__image {
-  margin: 0 auto;
+.company__link {
+  text-align: center;
   display: block;
+}
+
+.company__icon {
+  &:hover {
+    opacity: 80%;
+  }
+
+  &:active {
+    opacity: 60%;
+  }
 }
