--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -41,8 +41,20 @@
 }
 
 .main-header__wrapper-nojs {
-  display: block;
-  padding: 0;
+  @media (max-width: @mobile-width-only) {
+    display: block;
+    padding: 0;
+    width: auto;
+  }
+}
+
+.main-header__wrapper-nojs .main-header__wrapper-logo {
+  @media (max-width: @mobile-width-only) {
+    margin: 0 auto;
+    width: 280px;
+    padding-right: 89px;
+    padding-bottom: 17px;
+  }
 }
 
 .main-header__wrapper-logo {
@@ -50,6 +62,14 @@
   justify-content: space-between;
   width: 191px;
   align-items: center;
+
+  &:hover {
+    opacity: 80%;
+  }
+
+  &:active {
+    opacity: 60%;
+  }
 
   @media (min-width: @tablet-width) {
     width: auto;
