--- a/source/less/blocks/programs-list.less
+++ b/source/less/blocks/programs-list.less
@@ -90,26 +90,6 @@
     padding-left: 52px;
     padding-bottom: 55px;
   }
-
-
-  &::after {
-    position: absolute;
-    left: 25px;
-    top: 13px;
-    content: url("../img/mobile-cat-small.svg");
-
-    @media (min-width: @tablet-width) {
-      content: url("../img/tablet-cat-small.svg");
-      left: 393px;
-      top: 124px;
-    }
-
-    @media (min-width: @desktop-width) {
-      content: url("../img/desktop-cat-small.svg");
-      left: 64px;
-      top: 39px;
-    }
-  }
 }
 
 .programs-list__item--cat-big {
@@ -118,25 +98,6 @@
   @media (min-width: @tablet-width) {
     padding-top: 77px;
     padding-left: 53px;
-  }
-
-  &::after {
-    position: absolute;
-    left: 3px;
-    top: 27px;
-    content: url("../img/mobile-cat-big.svg");
-
-    @media (min-width: @tablet-width) {
-      content: url("../img/tablet-cat-big.svg");
-      left: 462px;
-      top: 72px;
-    }
-
-    @media (min-width: @desktop-width) {
-      content: url("../img/desktop-cat-big.svg");
-      left: 30px;
-      top: 65px;
-    }
   }
 }
 
@@ -160,6 +121,46 @@
   @media (min-width: @desktop-width) {
     margin-bottom: 73px;
     padding-left: 162px;
+  }
+}
+
+.programs-list__icon--small {
+  position: absolute;
+  left: 24px;
+  top: 10px;
+
+  @media (min-width: @tablet-width) {
+    width: 140px;
+    height: 194px;
+    left: 468px;
+    top: 70px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 70px;
+    height: 97px;
+    left: 63px;
+    top: 37px;
+  }
+}
+
+.programs-list__icon--big {
+  position: absolute;
+  left: 10px;
+  top: 31px;
+
+  @media (min-width: @tablet-width) {
+    width: 268px;
+    height: 112px;
+    left: 406px;
+    top: 141px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 134px;
+    height: 56px;
+    left: 26px;
+    top: 73px;
   }
 }
 
@@ -203,24 +204,40 @@
   position: relative;
   padding-right: 60px;
 
-  background-image: url("../img/icon-arrow.svg");
-  background-repeat: no-repeat;
-  background-position: center right 10px;
-
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 30px;
   }
 
   @media (min-width: @desktop-width) {
-    /*...*/
+    font-size: 20px;
+    line-height: 30px;
   }
 
   &:hover {
     opacity: 0.8;
   }
 
+  &:hover .programs-list__arrow-icon {
+    width: 32px;
+    height: 13px;
+    right: 19px;
+  }
+
   &:active {
     opacity: 0.3;
   }
+
+  &:active .programs-list__arrow-icon {
+    width: 32px;
+    height: 13px;
+    right: 19px;
+  }
 }
+
+.programs-list__arrow-icon {
+  position: absolute;
+  right: 23px;
+  bottom: 6px;
+}
+
