--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -1,5 +1,5 @@
 .present {
-  background-image: url("../img/catalog-cat-background.jpg");
+  background-image: url("../img/catalog-cat-background-mobile.jpg");
   background-repeat: no-repeat;
 
   width: 280px;
@@ -65,6 +65,7 @@
     padding-top: 50px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
   }
 
   @media (min-width: @desktop-width) {
@@ -77,12 +78,10 @@
 
   @media (min-width: @tablet-width) {
     margin-bottom: 0;
-    margin-left: 265px;
   }
 
   @media (min-width: @desktop-width) {
     margin-bottom: 46px;
-    margin-left: 0;
   }
 }
 
@@ -93,9 +92,11 @@
   line-height: 20px;
   color: @color-white;
   margin: 0;
+  text-align: center;
 
   @media (min-width: @tablet-width) {
     width: 161px;
+    text-align: left;
   }
 
   @media (min-width: @desktop-width) {
