--- a/source/less/common/variables.less
+++ b/source/less/common/variables.less
@@ -1,5 +1,5 @@
 /* Colors */
-@color-white: #ffffff;
+@color-white: #FFFFFF;
 @color-black: #000000;
 @color-black-2: #111111;
 @color-black-3: #222222;
@@ -18,6 +18,7 @@
 @color-special-grey: #CDCDCD;
 @color-special-grey-1: #CDCDCD;
 @color-special-grey-2: #D3D3D3;
+@color-special-grey-3: #BABABA;
 @color-error: #FF8282;
 
 /* Fonts */
