--- a/source/less/blocks/html-academy.less
+++ b/source/less/blocks/html-academy.less
@@ -30,7 +30,7 @@
 
 .html-academy__link:hover {
   .html-academy__icon {
-    fill: @color-basic-green;
+    stroke: @color-basic-green;
   }
 }
 
@@ -38,6 +38,6 @@
   opacity: 0.3;
 
   .html-academy__icon {
-    fill: @color-basic-green;
+    stroke: @color-basic-green;
   }
 }
