--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -1,5 +1,11 @@
 .main-header {
-  /* ... */
+  @media (min-width: @tablet-width) {
+    margin-bottom: 52px;
+  }
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 107px;
+  }
 }
 
 .main-header__wrapper {
@@ -26,9 +32,10 @@
     align-items: center;
     justify-content: space-between;
     min-height: 100px;
-    padding: 30px;
+    padding-top: 39px;
+    padding-left: 30px;
+    padding-right: 30px;
     padding-bottom: 0;
-    margin-bottom: 62px;
     width: 768px;
   }
 
