--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -3,7 +3,7 @@
 
   padding: 20px;
   padding-top: 25px;
-  padding-bottom: 40px;
+  padding-bottom: 46px;
 
   @media (min-width: @tablet-width) {
     padding-left: 0;
@@ -29,7 +29,7 @@
     "range";
 
   @media (min-width: @tablet-width) {
-    width: 100%;
+    width: 768px;
     grid-template-columns: 1fr;
     grid-template-areas: "description"
       "parametrs"
@@ -38,7 +38,7 @@
 
   @media (min-width: @desktop-width) {
     width: 100%;
-    grid-template-columns: 436px 560px;
+    grid-template-columns: 600px 560px;
     gap: 0 224px;
     grid-template-areas: "description range"
       "parametrs range";
@@ -47,15 +47,17 @@
 
 .example__wrapper-description {
   grid-area: description;
+  padding-left: 21px;
+  width: 301px;
 
   @media (min-width: @tablet-width) {
     padding-left: 30px;
     padding-right: 30px;
+    width: 738px;
   }
 
   @media (min-width: @desktop-width) {
-    padding-left: 110px;
-    padding-right: 110px;
+    padding-left: 126px;
   }
 }
 
@@ -84,6 +86,7 @@
 
 .example__parametrs {
   grid-area: parametrs;
+  padding-left: 21px;
 
   @media (min-width: @tablet-width) {
     padding-left: 30px;
@@ -91,13 +94,17 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding-left: 110px;
+    padding-left: 126px;
     padding-right: 110px;
   }
 }
 
 .example__range {
   grid-area: range;
+
+  @media (min-width: @tablet-width) {
+    min-height: 686px;
+  }
 }
 
 .example__description {
@@ -107,7 +114,7 @@
   line-height: 18px;
   color: @color-dark-grey;
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 4px;
 
   @media (min-width: @tablet-width) {
     font-size: 16px;
@@ -118,7 +125,7 @@
   @media (min-width: @desktop-width) {
     font-size: 16px;
     line-height: 24px;
-    margin-bottom: 69px;
+    margin: 0;
     width: 436px;
   }
 }
@@ -129,15 +136,17 @@
   font-size: 14px;
   line-height: 20px;
   text-transform: uppercase;
-  text-align: center;
-  width: 188px;
-  margin: 0 auto;
+  width: 235px;
+  padding-left: 46px;
+  margin-bottom: 19px;
 
   @media (min-width: @tablet-width) {
-    width: 174px;
     font-size: 20px;
     text-align: right;
     margin: 0;
+    width: 225px;
+    padding-left: 0;
+    padding-top: 11px;
   }
 
   @media (min-width: @desktop-width) {
@@ -152,6 +161,12 @@
 
 .example__cost-description {
   display: inline-block;
+  padding-right: 5px;
+
+  @media (min-width: @tablet-width) {
+    padding-right: 2px;
+    padding-bottom: 9px;
+  }
 }
 
 .example__cost-price {
