--- a/source/less/blocks/functional-food.less
+++ b/source/less/blocks/functional-food.less
@@ -18,6 +18,7 @@
     height: 302px;
     background-image: url("../img/index-cat-background-mobile.jpg");
     background-repeat: no-repeat;
+    background-size: contain;
     top: 0;
     background-position: center;
   }
@@ -42,6 +43,7 @@
 
   padding: 20px;
   padding-top: 27px;
+  padding-bottom: 0;
   width: 320px;
   position: relative;
   z-index: 6;
@@ -61,15 +63,15 @@
 
   @media (min-width: @desktop-width) {
     background-image: none;
-    min-width: 920px;
-    min-height: 499px;
+    min-width: 1065px;
+    min-height: 442px;
     padding: 0;
 
     &::after {
       content: url("../img/index-cat-background-desktop.jpg");
       position: absolute;
-      left: 487px;
-      top: -206px;
+      left: 531px;
+      top: -223px;
       min-width: 920px;
       min-height: 499px;
       z-index: -1;
@@ -80,8 +82,8 @@
       width: 720px;
       height: 694px;
       position: absolute;
-      left: 486px;
-      top: -206px;
+      left: 531px;
+      top: -223px;
       background-color: fade(@color-basic-green, 85%);
       z-index: 3;
     }
@@ -136,13 +138,14 @@
     color: @color-black;
     margin-bottom: 49px;
     text-align: left;
+    padding-left: 3px;
   }
 
   @media (min-width: @desktop-width) {
     font-size: 20px;
     line-height: 20px;
     color: @color-black;
-    margin-bottom: 52px;
+    margin-bottom: 54px;
   }
 }
 
@@ -153,7 +156,7 @@
   text-decoration: none;
   color: @color-white;
   text-transform: uppercase;
-  padding: 7px;
+  padding: 10px;
   text-align: center;
   width: 280px;
   display: block;
@@ -161,13 +164,15 @@
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 20px;
-    padding: 14px;
+    padding: 17px;
+    width: 247px;
+    padding-left: 22px;
   }
 
   @media (min-width: @desktop-width) {
     font-size: 20px;
     line-height: 20px;
-    padding: 14px;
+    padding: 15px;
   }
 }
 
@@ -178,7 +183,7 @@
   z-index: 3;
 
   @media (min-width: @tablet-width) {
-    left: -50px;
+    left: -88px;
     top: 200px;
     width: 709px;
     height: 609px;
@@ -186,8 +191,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    left: 330px;
-    top: -46px;
+    left: 368px;
+    top: -82px;
     width: 552px;
     height: 499px;
     z-index: 3;
