--- a/source/less/blocks/main-container.less
+++ b/source/less/blocks/main-container.less
@@ -9,6 +9,10 @@
 
 .main-container__functional-food {
   margin-bottom: 20px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 0;
+  }
 }
 
 .main-container__programs-food {
@@ -24,14 +28,14 @@
 }
 
 .main-container__program-info {
-  margin-bottom: 20px;
+  margin-bottom: 47px;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 43px;
+    margin-bottom: 18px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 69px;
+    margin-bottom: 43px;
   }
 }
 
