--- a/source/less/blocks/program-info.less
+++ b/source/less/blocks/program-info.less
@@ -1,6 +1,4 @@
 .program-info {
-  padding: 20px;
-
   @media (min-width: @tablet-width) {
     padding: 30px;
     padding-top: 0;
@@ -39,7 +37,7 @@
   font-size: 36px;
   line-height: 40px;
   margin: 0;
-  margin-bottom: 40px;
+  margin-bottom: 43px;
 
   @media (min-width: @tablet-width) {
     font-size: 60px;
@@ -67,12 +65,12 @@
 
   @media (min-width: @tablet-width) {
     grid-template-columns: 250px 250px;
-    gap: 37px 130px;
+    gap: 37px 133px;
   }
 
   @media (min-width: @desktop-width) {
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 80px;
+    gap: 76px;
   }
 }
 
@@ -87,7 +85,7 @@
 
     &::after {
       position: absolute;
-      left: 126px;
+      left: 116px;
       top: -2px;
       counter-increment: program-info;
       content: counter(program-info);
@@ -106,8 +104,8 @@
     padding-bottom: 57px;
 
     &::after {
-      left: 126px;
-      top: -2px;
+      left: 114px;
+      top: 2px;
     }
   }
 }
@@ -178,7 +176,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    left: 25px;
+    left: 28px;
     top: 25px;
   }
 }
@@ -195,8 +193,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    left: 25px;
-    top: 25px;
+    left: 23px;
+    top: 23px;
   }
 }
 
@@ -210,10 +208,18 @@
   width: 199px;
   z-index: 2;
 
+  br {
+    display: none;
+  }
+
   @media (min-width: @tablet-width) {
     font-size: 16px;
     line-height: 24px;
     width: 245px;
+
+    br {
+      display: inline;
+    }
   }
 
   @media (min-width: @desktop-width) {
