--- a/source/less/blocks/range.less
+++ b/source/less/blocks/range.less
@@ -1,12 +1,14 @@
 .range {
+  position: relative;
   /*...*/
-
-  @media (min-width: @tablet-width) {
-    background: linear-gradient(to bottom, @color-white 11%, @color-light-grey 11%, @color-light-grey 22%, @color-light-grey 22%);
-  }
-
-  @media (min-width: @desktop-width) {
-    background: none;
+  &::before {
+    height: 256px;
+    width: 4px;
+    border-radius: 2px;
+    content: "";
+    position: absolute;
+    left: 45%;
+    background-color: @color-dark-grey-1;
   }
 }
 
