--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -6,8 +6,6 @@
     display: flex;
     flex-grow: 1;
     flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
   }
 }
 
@@ -26,13 +24,20 @@
   }
 
   @media (min-width: @tablet-width) {
+    padding-top: 26px;
+
     &:not(:last-child) {
-      margin-right: 35px;
+      margin-right: 36px;
     }
   }
 
   @media (min-width: @desktop-width) {
     padding-bottom: 10px;
+    padding-top: 19px;
+
+    &:not(:last-child) {
+      margin-right: 35px;
+    }
   }
 }
 
@@ -49,16 +54,17 @@
   }
 
   @media (min-width: @tablet-width) {
+    font-weight: 400;
     font-size: 18px;
     line-height: 24px;
     color: @color-black;
-    padding-bottom: 10px;
+    padding-bottom: 6px;
   }
 
   @media (min-width: @desktop-width) {
+    padding-bottom: 7px;
     font-size: 20px;
     line-height: 30px;
-    padding-bottom: 10px;
     color: @color-black;
   }
 }
