--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,5 +1,7 @@
 .social {
   border-bottom: 1px solid @color-light-grey-3;
+  padding-top: 20px;
+  padding-bottom: 15px;
 
   @media (min-width: @tablet-width) {
     border-bottom: none;
@@ -18,8 +20,14 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  margin: 0;
   padding: 0;
   align-items: center;
+
+  @media (max-width: @mobile-width-only) {
+    margin: 0 auto;
+    width: 320px;
+  }
 }
 
 .social__item {
@@ -32,11 +40,11 @@
   fill: @color-dark-grey-1;
 
   &:hover {
-    fill: @color-basic-green;
+    stroke: @color-basic-green;
   }
 
   &:active {
-    fill: @color-basic-green;
+    stroke: @color-basic-green;
     opacity: 0.3;
   }
 }
